<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, FriarBotsActivity!</string>
    <string name="version_number">Version 0.2.5</string>
    <string name="app_name">FriarBots</string>
    <string name="team">Team 3309\nFriarBots</string>
    <string name="menu">Main Menu</string>
    <string name="status">Current Status</string>
    <string name="status_menu_text">The current status of Team 3309\'s robot.</string>
    <string name="committees">Committees</string>
    <string name="code">Programming</string>
    <string name="code_menu_text">Programming Committee\'s page including the code and current progress.</string>
    <string name="balance">Balance</string>
    <string name="balance_menu_text">Balance Committee\'s page including the current progress and more.</string>
    <string name="drive_systems">Drive Systems</string>
    <string name="drive_systems_menu_text">Drive Systems Committee\'s page including current progress and more.</string>
    <string name="shooter">Shooter</string>
    <string name="shooter_menu_text">Shooter Committee\'s page including current progress and more.</string>
    <string name="posts">Web Site Posts</string>
    <string name="posts_menu_text">An RSS feed of the Servite Robotics web site\'s posts</string>
    <string name="gallery">Gallery</string>
    <string name="gallery_menu_text">Photos of Servite\'s Robotics Team and what they\'ve done.</string>
    <string name="scouting">Scouting</string>
    <string name="scouting_menu_text">Scouting Committee\'s page for inputing and viewing information.</string>
    <string name="about_settings">About/Settings</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="about_menu_text">About the FriarBot\'s Android Application and some settings</string>
	<string name="changelog">Changelog</string>
	<string name="changelog_about_text">An accurate keeping of the changes of this application and their corresponding version numbers.</string>
	<string name="calendar">Calendar</string>
	<string name="calendar_menu_text">An great place to keep track of the upcoming events.</string>
	<string name="checkbox_update">Manual Updates</string>
	<string name="both">Both</string>
	<string name="neither">Neither</string>
	<string name="opponent_questions">Opponent Questions</string>
	<string name="team_info">Team Information</string>
	<string name="wont">We won\'t on this bridge</string>
	<string name="oh_no">OH NO!!!</string>
	<string name="left_blank">You left a field blank!!!</string>
	<string name="na">NA</string>
	
    
	    
	<string name="balance_order">In what ORDER will you board our team\'s balance bridge?</string>
	<string name="opponent_balance_exist">OPPONENT: Will you board the Coopertition balance bridge?</string>
	<string name="opponent_balance_order">OPPONENT: In what order will you board the Coopertition balance bridge?</string>
	<string name="played_with">How many times have you played with/against this team?</string>
	<string name="first">First</string>
	<string name="second">Second</string>
	<string name="third">Third</string>
    <string name="upload">Upload</string>
	<string name="balance_rank">Please rank your ability to balance (Down to the .5 star)\:</string>
	<string name="cross_method">Field Crossing Method\:</string>
	<string name="scout_team_number">Team Number\:</string>
	<string name="how_many_balance">How many OTHER robots can balance alongside your robot?</string>
	<string name="bumper">Bumper</string>
	<string name="bridge">Bridge</string>
	<string name="off_def">ROE\:</string>
	<string name="off">Offense</string>
	<string name="def">Defense</string>
	<string name="one">1</string>
	<string name="two">2</string>
	<string name="three">3</string>
	<string name="four">4</string>
	<string name="five">5</string>
	<string name="six">6</string>
	<string name="zero">0</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="zero_alone">Only by ourselves</string>
	<string name="cant">We can\'t balance</string>
	<string name="other_notes">Other Notes\:</string>
	<string name="update_help">Every time you enter the Calendar, any Committee section, Current Status, Web Site Posts, and Gallery sections of this application, the app checks the interwebs for an update then updates the information. If you do not want it to do this please check the application; then to recieve an update go into the menu and select "Manual Update".</string>
    <string name="about_text">The FriarBots application was made to simplify and unify all the team\'s information in one easy place. From Scouting information to weekly updates accessible for the whole team. We also made this application for parents, who want an easy way to follow what their sons and daughters are doing in the world of robotics.</string>
</resources>