<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/black" >
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:textSize="@dimen/title_text"
        android:textColor="@color/white"
        android:gravity="center" />
    <ImageView
	    	    android:layout_width="match_parent"
	    	    android:layout_height="4dp"
	    	    android:src="@color/grey" />
    
	<ScrollView 
	    android:id="@+id/ScrollViewMenu"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:scrollbars="vertical"
        android:isScrollContainer="true"
        android:scrollbarAlwaysDrawVerticalTrack="true">
		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:orientation="vertical"
		    android:onClick="onStatusButtonClick"
		    android:clickable="true" >
		    <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal" >
		        <ImageView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_gravity="center_vertical"
		            android:src="@android:drawable/ic_menu_agenda"
		            android:padding="@dimen/splash_padding" />
		        <LinearLayout
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_gravity="left"
		            android:orientation="vertical" >
		            <TextView
		                android:layout_height="wrap_content"
		                android:layout_width="wrap_content"
		                android:text="@string/status"
		                android:textSize="@dimen/menu_titles"
		                android:textColor="@color/white"/>
		            <TextView
		                android:layout_height="wrap_content"
		                android:layout_width="wrap_content"
		                android:text="@string/status_menu_text"
		                android:textSize="@dimen/menu_text"
		                android:textColor="@color/lightgrey" />
		        </LinearLayout>
		    </LinearLayout>
	    	<ImageView
	    	    android:layout_width="match_parent"
	    	    android:layout_height="4dp"
	    	    android:src="@color/grey" />
		    
	    
		</LinearLayout>
	</ScrollView>
</LinearLayout>